--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
    ports:
     - '8000:8000'
    volumes:
-    - './app:/app'
+    - './project:/project'
    command: "python manage.py runserver 0.0.0.0:8000"
    depends_on:
     - "db"
